fixed text align

--- a/products-app/src/App.css
+++ b/products-app/src/App.css
@@ -10,7 +10,7 @@
 }
 
 .App {
-  text-align: center;
+  text-align: left;
 }
 
 .App-logo {
